--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,18 @@ export(multiple.guidance)
 export(ploting)
 export(wrf.download)
 import(aws.s3)
-import(dplyr)
 import(ggplot2)
 import(hydroGOF)
-import(lubridate)
-import(stats)
-import(terra)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,group_by)
+importFrom(dplyr,summarize)
+importFrom(lubridate,floor_date)
+importFrom(magrittr,"%>%")
+importFrom(stats,as.formula)
+importFrom(stats,cor)
+importFrom(stats,lm)
+importFrom(stats,predict)
+importFrom(terra,extract)
+importFrom(terra,project)
+importFrom(terra,rast)
+importFrom(terra,vect)
