--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(dplyr,as_tibble)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarize)
 importFrom(lubridate,floor_date)
+importFrom(lubridate,is.POSIXct)
 importFrom(magrittr,"%>%")
 importFrom(stats,as.formula)
 importFrom(stats,cor)
