--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(daily2monthly)
 export(find.nearest.point)
 export(get.wrf.files)
+export(ith)
 export(load.by.variable)
 export(mg.evaluation)
 export(multiple.guidance)
@@ -22,6 +23,8 @@ importFrom(stats,cor)
 importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(terra,extract)
+importFrom(terra,names)
+importFrom(terra,nlyr)
 importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,vect)
